more copy and link to washingtub photos

--- a/app/views/home/sections/_description.html.erb
+++ b/app/views/home/sections/_description.html.erb
@@ -14,7 +14,7 @@
         </p>
         <br />
         <p class="text-faded">
-          The residence is tuition free. Housing and food are not provided (besides a welcome dinner, and a food on Sunday the 29th). To offset this cost, we are giving a $400 stipend to each guest artist. We estimate housing and food costs to be between $500 and $600. Upon acceptance, we will assist as possible in finding accommodations and providing recommendation letters for grants.
+          The residency is tuition free. Housing and food are not provided (besides a welcome dinner, and all meals on Sunday the 29th). To offset this cost, we are giving a $400 stipend to each guest artist. We estimate housing and food costs to be between $500 and $600. Upon acceptance, we will assist as possible in finding accommodations and providing recommendation letters for grants.
         </p>
         <br />
         <p class="text-faded">
