--- a/app/views/home/sections/_application.html.erb
+++ b/app/views/home/sections/_application.html.erb
@@ -133,7 +133,7 @@
             </h3>
           </div>
           <p class="text-faded small-text">
-            You may provide 1 - 3 Work Samples, in whatever form/format you feel best represents you. To note: we only require 1 Work Sample, and the number of Work Samples you submit will not affect negatively affect application.
+            You may provide 1 - 3 Work Samples, in whatever form/format you feel best represents you. To note: we only require 1 Work Sample, and the number of Work Samples you submit will not negatively affect application.
           </p>
           <%= f.label :link1, 'Work Sample 1, Link (Required)', class: ' m-5-top', :required => true %>
           <%= f.text_field :link1, class: 'form-control', :required => true %>
