washingtub art center => washingtub gallery

--- a/app/views/home/sections/_application.html.erb
+++ b/app/views/home/sections/_application.html.erb
@@ -170,7 +170,7 @@
             Due to these factors, we encourage works of open (and malleable) instrumentation and of open duration. This is by no means a requirement.
           </p>
           <p class="text-faded small-text">
-            Also, though the performances will take place at Washington Street Art Center, you are not confined to that space (though, it will be cold and snowy in Boston, so please be aware of this!).
+            Also, though the performances will take place at Washington Street Gallery, you are not confined to that space (though, it will be cold and snowy in Boston, so please be aware of this!).
           </p>
           <p class="text-faded small-text">
             To note: there will be no piano available in the space.
