--- a/app/views/home/sections/_description.html.erb
+++ b/app/views/home/sections/_description.html.erb
@@ -6,7 +6,7 @@
           ABOUT
         </h2> -->
         <p class="text-faded">
-          <i>co-incidence, an experimental music residency </i>is a gathering of experimental composer-performers for six days hosted by Non-Event at Washington Street Art Center in Boston.
+          <i>co-incidence, an experimental music residency </i>is a gathering of experimental composer-performers for six days hosted by Non-Event at Washington Street Gallery in Boston.
         </p>
         <hr class="light">
         <p class="text-faded">
