--- a/app/views/home/sections/_details.html.erb
+++ b/app/views/home/sections/_details.html.erb
@@ -13,7 +13,7 @@
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
         <p>
-          While most of this will be determined by the Artists, we do have a few 'fixed points' during the residency. Namely, three performances at Washington Street Art Center:
+          While most of this will be determined by the Artists, we do have a few 'fixed points' during the residency. Namely, three performances at Washington Street Gallery:
         </p>
       </div>
     </div>
@@ -63,7 +63,7 @@
           </h5>
         </div>
         <div class="text">
-          This show will last from sunrise until completion and feature new works by the Guest Artists, Resident Artist, and Directors, performed by the co-incidence ensemble (Guest Artists, Resident Artist, and Directors). These works will have been workshopped and critiqued throughout the week. Breakfast, Lunch, and Dinner will be provided at Washington Street Art Center during the show.
+          This show will last from sunrise until completion and feature new works by the Guest Artists, Resident Artist, and Directors, performed by the co-incidence ensemble (Guest Artists, Resident Artist, and Directors). These works will have been workshopped and critiqued throughout the week. Breakfast, Lunch, and Dinner will be provided at Washington Street Gallery during the show.
         </div>
       </div>
     </div>
@@ -74,7 +74,7 @@
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
         <p>
-          In addition to these events, the co-incidence artists will be at Washington Street Art Center morning, afternoon, and evening, rehearsing works and discussing relevant (or not) topics together. All of this, with the exception of the performances, provides a flexible framework that can be altered during the residency by the artists as they (we) see fit.
+          In addition to these events, the co-incidence artists will be at Washington Street Gallery morning, afternoon, and evening, rehearsing works and discussing relevant (or not) topics together. All of this, with the exception of the performances, provides a flexible framework that can be altered during the residency by the artists as they (we) see fit.
         </p>
       </div>
     </div>
