--- a/app/views/home/sections/_partners.html.erb
+++ b/app/views/home/sections/_partners.html.erb
@@ -22,7 +22,7 @@
           </div>
           <p class="text-muted partner-link">
             <a href="http://washingtonst.org/">
-              Washington Street Art Center
+              Washington Street Gallery
             </a>
           </p>
           <p>
