you're never too old to apply... or too foreign...

--- a/app/views/home/sections/_description.html.erb
+++ b/app/views/home/sections/_description.html.erb
@@ -18,6 +18,10 @@
         </p>
         <br />
         <p class="text-faded">
+          We are accepting both domestic and international applications, and will consider applicants at any point in their career.
+        </p>
+        <br />
+        <p class="text-faded">
           Please see a description of our collaborators, the application, and further details below.
         </p>
         <p class="text-faded">
