--- a/app/views/home/sections/_partners.html.erb
+++ b/app/views/home/sections/_partners.html.erb
@@ -81,7 +81,7 @@
           </p>
           --
           <p>
-            "In baseball, a very interesting situation occurs every time a ball is pitched. First the catcher gives a hand signal to the pitcher, telling him which pitch to throw. The catcher is making this choice based on a thorough knowledge of each batter and of the pitcher's strong and weak pitches. Once he agrees to the pitch, the pitcher throws, as best he can, the pitch indicated. There are many variables that can influence how the pitch is thrown: speed, spin on the ball, the change of direction of the ball, etc. Each pitch, though it might be called the same thing as another, is therefore unique."
+            "As a composer, I am interested in challenging the ear. This is not in order to be difficult, but because I know that in meeting this challenge, the senses and the mind have the opportunity to experience the kind of joy discussed above. For this reason, my music focuses on a kind of listening which emphasizes the limits of perception: the tiny, practically inaudible variations of sound which occur in an apparently stable tone; the sometimes invisible border between sound an silence; the almost imperceptible sense of time passing; the infinitesimal difference between something which is almost simultaneous and something which is truly simultaneous. In this realm the senses become aware of how subtle they are, and if we succeed can make us feel lucky to be alive.”
           </p>
           --
           <p>
