--- a/app/views/admin/show.html.erb
+++ b/app/views/admin/show.html.erb
@@ -11,9 +11,12 @@
       </h4>
     </div>
   </div>
-</section
+</section>
 
 <section>
+    <h3>
+      <%= @coincidents.count %> applications
+    </h3>
     <table class="table table-bordered">
       <thead>
         <tr>
