--- a/app/views/home/sections/_details.html.erb
+++ b/app/views/home/sections/_details.html.erb
@@ -33,7 +33,7 @@
           </h5>
         </div>
         <div class="text">
-          This show will feature local Boston artists performing two new works by Boston-based experimental artists and one by co-incidence Resident Artist Michael Pisaro.
+          This show will feature two new works by Boston-based experimental artists Morgan Evans-Weiler (new piece), Michael Rosenstein & Jesse Collins (new piece), and one by co-incidence Resident Artist Michael Pisaro.
         </div>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-12 text-center">
@@ -63,7 +63,7 @@
           </h5>
         </div>
         <div class="text">
-          This show will last from sunrise until completion and feature new works by the Guest Artists, Resident Artist, and Directors, performed by the co-incidence ensemble (Guest Artists, Resident Artist, and Directors). These works will have been workshopped and critiqued throughout the week. Breakfast, Lunch, and Dinner will be provided at Washington Street Gallery during the show.
+          This show will last from sunrise until completion and feature new works by the Guest Artists and Resident Artist, performed by the co-incidence ensemble (Guest Artists and Resident Artist, and Directors). These works will have been workshopped and critiqued throughout the week. Breakfast, Lunch, and Dinner will be provided at Washington Street Gallery during the show.
         </div>
       </div>
     </div>
@@ -85,7 +85,7 @@
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
         <p>
-          Video/audio recordings and photographs of all performances will be provided, in addition to captured moments of the Residency.
+          High quality audio recordings and live sound for each concert will be run by Ernst Karel. Video recording and photographs will be run by Non-Event and co-incidence directors.
         </p>
       </div>
     </div>
