--- a/app/views/home/sections/_application.html.erb
+++ b/app/views/home/sections/_application.html.erb
@@ -35,7 +35,7 @@
         <ul>
           <li>
             <p class="text-faded">
-              Applications due December 10th, 2016
+              Applications due on December 10th, 2016, by 11:59 PM (EST)
             </p>
           </li>
           <li>
