--- a/app/assets/stylesheets/mine.scss
+++ b/app/assets/stylesheets/mine.scss
@@ -13,7 +13,7 @@
   background-color: #eee;
 }
 
-#application {
+#application, #guest-artists {
   background-color: #337ab7;
 }
 
@@ -73,4 +73,42 @@ h5 {
   a {
     color: white;
   }
+}
+
+.guest-artist-img {
+  text-align: center;
+  img {
+    width: 100%;
+    max-width: 150px;
+    margin-left: auto;
+    margin-right: auto;
+    border: 1px solid #F05F40;
+  }
+}
+
+/* why doesn't bootstrap have a class for this already? */
+.centered-xs {
+  @media (min-width: 769px) {
+    text-align: inherit;
+  };
+  @media (max-width: 768px) {
+    text-align: center;
+  };
+}
+
+#guest-artists {
+  .text-faded {
+    font-size: 14px;
+    line-height: 18px;
+  }
+}
+
+.guest-artist-row {
+  // margin-bottom: 65px;
+}
+
+.secondary {
+  margin-top: 40px;
+  margin-bottom: 40px;
+  border-color: #222;
 }
