--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,5 +4,6 @@
 <%= render 'home/sections/details' %>
 <%= render 'home/sections/partners' %>
 <!-- <hr style="max-width: inherit"> -->
-<%= render 'home/sections/application' %>
+<%#= render 'home/sections/application' %>
+<%= render 'home/sections/guest_artists' %>
 <%= render 'home/sections/about' %>
