links on quest artist section

--- a/app/views/home/sections/_guest_artists.html.erb
+++ b/app/views/home/sections/_guest_artists.html.erb
@@ -10,8 +10,7 @@
   </div>
   <br />
   <br />
-  <div class="container">
-    
+  <div class="container guest-artists">
 
       <!-- alexey -->
       <div class="row guest-artist-row">
@@ -19,6 +18,11 @@
           <div class="guest-artist-img">
             <%= image_tag asset_url("AZaitsev.png")%>
           </div>
+        </div>
+        <div class="col-xs-12 col-sm-9 centered-xs guest-link">
+          <h4>
+            <%= link_to("Alexey Zaitsev", "http://politeless.narod.ru/", :target => "_blank" ) %>
+          </h4>
         </div>
         <div class="col-xs-12 col-sm-9 centered-xs">
           <p class="text-faded">
@@ -36,6 +40,11 @@
             <%= image_tag asset_url("BLevinson.jpg")%>
           </div>
         </div>
+        <div class="col-xs-12 col-sm-9 centered-xs guest-link">
+          <h4>
+            <%= link_to("Ben Levinson", "https://soundcloud.com/ben_lev", :target => "_blank" ) %>
+          </h4>
+        </div>
         <div class="col-xs-12 col-sm-9 centered-xs">
           <p class="text-faded">
             Ben Levinson is a musician and writer based in Los Angeles. His primary musical project is California's Bellow through which he uses the world of pop music to explore composition, performance, personality, and brand. He regularly contributes reviews and features to the online magazine Tiny Mix Tapes and has self-released three chapbooks of poetry including his latest little collisions. He has never had a broken bone.
@@ -51,6 +60,11 @@
           <div class="guest-artist-img">
             <%= image_tag asset_url("CChen.jpg")%>
           </div>
+        </div>
+        <div class="col-xs-12 col-sm-9 centered-xs guest-link">
+          <h4>
+            <%= link_to("Carolyn Chen", "http://www.carolyn-chen.com", :target => "_blank" ) %>
+          </h4>
         </div>
         <div class="col-xs-12 col-sm-9 centered-xs">
           <p class="text-faded">
@@ -68,6 +82,11 @@
             <%= image_tag asset_url("CindyGiron.jpg")%>
           </div>
         </div>
+        <div class="col-xs-12 col-sm-9 centered-xs guest-link">
+          <h4>
+            <%= link_to("Cindy Giron", "http://www.cindygiron.com/", :target => "_blank" ) %>
+          </h4>
+        </div>
         <div class="col-xs-12 col-sm-9 centered-xs">
           <p class="text-faded">
             Boston native Cindy Giron is a composer, pianist, educator and contemporary performer currently based in the Netherlands.  She began her musical studies at New England Conservatory's Preparatory School, holds a Bachelors of Music from Manhattan School of Music, a masters in Music Theory & Composition from NYU Steinhardt, and is currently pursuing her second masters degree in Music Composition and Practice-Based Research with a minor in Contemporary Piano Performance at the Royal Conservatory of The Hague. Intrigued by quiet spaces, nature, breath, holistic practices and collaborations, Cindy’s artistic expressions encompass a variety of forms be it solo, chamber and orchestral works, along with installation environments.
@@ -84,6 +103,11 @@
             <%= image_tag asset_url("EBaker.jpg")%>
           </div>
         </div>
+        <div class="col-xs-12 col-sm-9 centered-xs guest-link">
+          <h4>
+            <%= link_to("Elizabeth A. Baker", "https://elizabethabaker.com/", :target => "_blank" ) %>
+          </h4>
+        </div>
         <div class="col-xs-12 col-sm-9 centered-xs">
           <p class="text-faded">
             Celebrated for her “terrifying dynamic range,” cleanliness of sound, as well as unique sensitivity and ability to sculpt her performance for the acoustics of a space, Elizabeth A. Baker is a dramatic performer with an honest, near psychic connection to music, which resounds with audiences of all ages and musical backgrounds. As a creator, her understanding of sonic space from organic intuition and studies in music production, pair with a unique eclectic voice, making for a spatial and auditory experience of music. Eschewing the collection of traditional titles that describe single elements of her body of work, Elizabeth refers to herself as a “New Renaissance Artist” that embraces a constant stream of change and rebirth in practice, which expands into a variety of media, chiefly an exploration of how the sonic world can be manipulated to personify a variety of philosophies and principles both tangible as well as intangible
@@ -99,6 +123,11 @@
           <div class="guest-artist-img">
             <%= image_tag asset_url("MBullock.jpg")%>
           </div>
+        </div>
+        <div class="col-xs-12 col-sm-9 centered-xs guest-link">
+          <h4>
+            <%= link_to("Mike Bullock", "http://www.mikebullock.com/", :target => "_blank" ) %>
+          </h4>
         </div>
         <div class="col-xs-12 col-sm-9 centered-xs">
           <p class="text-faded">
@@ -124,6 +153,11 @@
           <div class="guest-artist-img">
             <%= image_tag asset_url("SPitan.jpg")%>
           </div>
+        </div>
+        <div class="col-xs-12 col-sm-9 centered-xs guest-link">
+          <h4>
+            <%= link_to("Sarah Pitan", "http://e47730988.tumblr.com/", :target => "_blank" ) %>
+          </h4>
         </div>
         <div class="col-xs-12 col-sm-9 centered-xs">
           <p class="text-faded">
