--- a/app/assets/stylesheets/mine.scss
+++ b/app/assets/stylesheets/mine.scss
@@ -96,10 +96,14 @@ h5 {
   };
 }
 
-#guest-artists {
+.guest-artists {
   .text-faded {
     font-size: 14px;
     line-height: 18px;
+  }
+
+  a{
+    color: #222;
   }
 }
 
@@ -111,4 +115,8 @@ h5 {
   margin-top: 40px;
   margin-bottom: 40px;
   border-color: #222;
+}
+
+.guest-link {
+  color: red;
 }
