--- a/app/views/home/sections/_guest_artists.html.erb
+++ b/app/views/home/sections/_guest_artists.html.erb
@@ -12,26 +12,7 @@
   <br />
   <div class="container guest-artists">
 
-      <!-- alexey -->
-      <div class="row guest-artist-row">
-        <div class="col-xs-12 col-sm-3">
-          <div class="guest-artist-img">
-            <%= image_tag asset_url("AZaitsev.png")%>
-          </div>
-        </div>
-        <div class="col-xs-12 col-sm-9 centered-xs guest-link">
-          <h4>
-            <%= link_to("Alexey Zaitsev", "http://politeless.narod.ru/", :target => "_blank" ) %>
-          </h4>
-        </div>
-        <div class="col-xs-12 col-sm-9 centered-xs">
-          <p class="text-faded">
-            alexey zaitsev: musician from moscow, russia. searching for music in both the sound and what's resonant: the musicmaker, the listener; desires and situations. thinking of music as a disciplined action (or something thought of as such?). retrospectively seen to address notions of innocent sound perception, and music as a profession and a practice. loves to learn to learn. brought up by a marxist.
-          </p>
-        </div>
-      </div>
-
-      <hr class="secondary">
+      
 
       <!-- ben -->
       <div class="row guest-artist-row">
@@ -69,6 +50,30 @@
         <div class="col-xs-12 col-sm-9 centered-xs">
           <p class="text-faded">
             Carolyn Chen has made music for supermarket, demolition district, and the dark. Her work reconfigures the everyday to retune habits of our ears through sound, text, light, image, and movement. For a decade she has studied the guqin, the Chinese 7-string zither traditionally played for private meditation in nature, which has inspired her thinking on listening and social space. Recent projects include a a story for ASL interpreter strung to chimes at a distance and commissions for Wild Rumpus and Klangforum Wien. The work has been presented in 22 countries and described by The New York Times as “the evening’s most consistently alluring … a quiet but lush meditation.” It has been supported and commissioned by impuls, MATA, Fulbright Foundation, Paul and Daisy Soros Fellowships for New Americans, Stanford University Sudler Prize, University of California Institute for Research in the Arts, American Composers Forum, ASCAP, Emory Planetarium, Composers Conference at Wellesley, and Machine Project at the Hammer Museum. Recordings are available on Perishable, the wulf., Quakebasket, and Play It Forward. She earned a PhD in music from UC San Diego, and an MA in Modern Thought and Literature and BA in music from Stanford University, with an honors thesis on free improvisation and radical politics. 
+          </p>
+        </div>
+      </div>
+
+      <hr class="secondary">
+
+      <!-- chris williams -->
+      <div class="row guest-artist-row">
+        <div class="col-xs-12 col-sm-3">
+          <div class="guest-artist-img">
+            <%= image_tag asset_url("chris.jpg")%>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-9 centered-xs guest-link">
+          <h4>
+            <%= link_to("Chris Williams", "http://chriswilliamscomposer.com/", :target => "_blank" ) %>
+          </h4>
+        </div>
+        <div class="col-xs-12 col-sm-9 centered-xs">
+          <p class="text-faded">
+            Chris Williams’ music is elemental and monolithic, work as ‘elegant in the making as in the made’. Ideas of growth and form, emergence, drift and self-similarity, appropriated from biology, in addition to precepts which have resonance across art-forms, science, and nature like colour, line, shape, pattern and process inform and permeate his music. The Philadelphia Inquirer recently called Chris Williams’ music a “a lovely shade of wistful”, while the Daily Review noted it as “brilliantly unsettling music”. 
+            <br />
+            <br />
+            Chris is a graduate of the Sydney Conservatorium of Music and completed a Master of Philosophy in composition, with Robert Saxton, at the University of Oxford. In 2012 Chris was commissioned by Carnegie Hall, where his work ‘San-Shih-Fan’ was premiered. 
           </p>
         </div>
       </div>
