who dat? => when dat?

--- a/app/views/home/sections/_who.html.erb
+++ b/app/views/home/sections/_who.html.erb
@@ -1,4 +1,100 @@
 <section id="who">
+
+  <!-- header -->
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2 class="section-heading">
+          SCHEDULE
+        </h2>
+        <hr class="primary">
+      </div>
+    </div>
+  </div>
+
+  <!-- schedule -->
+  <div class="container">
+    <div class="row text-center">
+      <div class="col-lg-8 col-lg-offset-2">
+        <p>
+          While the schedule is flexible and will vary day to day, here are some general guidelines. Please feel free to join in!
+        </p>
+        <ul style="padding-left: 0; ">
+          <li style="list-style-type: none; ">
+            <div class="text">
+              10:00 - 12:30 : session 1
+            </div>
+          </li>
+          <li style="list-style-type: none; ">
+            <div class="text">
+              13:30 - 16:00 : session 2
+            </div>
+          </li>
+          <li style="list-style-type: none; ">
+            <div class="text">
+              1630: rehearsal(s)
+            </div>
+          </li>
+        </ul>
+        <p>
+          During each session one of the guest artists will be presenting their work (which will be performed on Sunday the 29th during the 'From Sunrise until Completion' concert) as well as leading a conversation on a topic of their choosing. 
+        </p>
+      </div>
+    </div>
+    <div class="row text-center">
+      <div class="col-xs-12 col-sm-3">
+        <h4>
+          24th: Wednesday
+        </h4>
+        <div class="text">
+          Michael Pisaro
+        </div>
+        <div class="text">
+          Guest
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-3">
+        <h4>
+          25th: Thursday
+        </h4>
+        <div class="text">
+          Guest
+        </div>
+        <div class="text">
+          Guest
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-3">
+        <h4>
+          26th: Friday
+        </h4>
+        <div class="text">
+          Guest
+        </div>
+        <div class="text">
+          Guest
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-3">
+        <h4>
+          27th: Saturday
+        </h4>
+        <div class="text">
+          Guest
+        </div>
+        <div class="text">
+          Guest
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- 
+
+OLD SECTION 
+
+<section id="who">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
@@ -39,3 +135,4 @@
   </div>
 </section>
 
+ -->
