--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,7 +23,7 @@
           <a class="page-scroll" href="#partners">COLLABORATORS</a>
         </li>
         <li>
-          <a class="page-scroll" href="#application">Application</a>
+          <a class="page-scroll" href="#application">GUEST ARTISTS</a>
         </li>
         <li>
           <a class="page-scroll" href="#about">about</a>
