--- a/app/views/home/sections/_details.html.erb
+++ b/app/views/home/sections/_details.html.erb
@@ -3,7 +3,8 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading">
-          WHAT WILL TAKE PLACE?
+          <!-- WHAT WILL TAKE PLACE? -->
+          PERFORMANCES
         </h2>
         <hr class="primary">
       </div>
@@ -13,7 +14,8 @@
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
         <p>
-          While most of this will be determined by the Artists, we do have a few 'fixed points' during the residency. Namely, three performances at Washington Street Gallery:
+          <!-- While most of this will be determined by the Artists, we do have a few 'fixed points' during the residency. Namely, three performances at Washington Street Gallery: -->
+          There will be three performances at Washington Street Gallery
         </p>
       </div>
     </div>
@@ -70,7 +72,7 @@
   </div>
   <br />
   <br />
-  <div class="container">
+  <!-- <div class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
         <p>
@@ -80,7 +82,7 @@
     </div>
   </div>
   <br />
-  <br />
+  <br /> -->
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
