--- a/app/views/home/sections/_who.html.erb
+++ b/app/views/home/sections/_who.html.erb
@@ -21,30 +21,34 @@
         </p>
         <ul style="padding-left: 0; ">
           <li style="list-style-type: none; ">
-            <div class="text">
-              10:00 - 12:30 : session 1
-            </div>
+            <h4 style="color: #F05F40 !important;">
+              10am - 12pm :: session 1
+            </h4>
           </li>
           <li style="list-style-type: none; ">
-            <div class="text">
-              13:30 - 16:00 : session 2
-            </div>
+            <h4 style="color: #F05F40 !important;">
+              1:30pm - 4pm :: session 2
+            </h4>
           </li>
           <li style="list-style-type: none; ">
-            <div class="text">
-              1630: rehearsal(s)
-            </div>
+            <h4 style="color: #F05F40 !important;">
+              430pm :: rehearsal(s)
+            </h4>
           </li>
         </ul>
         <p>
           During each session one of the guest artists will be presenting their work (which will be performed on Sunday the 29th during the 'From Sunrise until Completion' concert) as well as leading a conversation on a topic of their choosing. 
         </p>
+        <p>
+          Be sure to follow us on <a href="https://www.facebook.com/coincidenceresidency" target="_blank">FaceBook</a> for updates!
+        </p>
+        <br />
       </div>
     </div>
     <div class="row text-center">
       <div class="col-xs-12 col-sm-3">
         <h4>
-          24th: Wednesday
+          25th: Wednesday
         </h4>
         <div class="text">
           Michael Pisaro
@@ -55,7 +59,7 @@
       </div>
       <div class="col-xs-12 col-sm-3">
         <h4>
-          25th: Thursday
+          26th: Thursday
         </h4>
         <div class="text">
           Guest
@@ -66,7 +70,7 @@
       </div>
       <div class="col-xs-12 col-sm-3">
         <h4>
-          26th: Friday
+          27th: Friday
         </h4>
         <div class="text">
           Guest
@@ -77,7 +81,7 @@
       </div>
       <div class="col-xs-12 col-sm-3">
         <h4>
-          27th: Saturday
+          28th: Saturday
         </h4>
         <div class="text">
           Guest
