--- a/app/views/home/sections/_who.html.erb
+++ b/app/views/home/sections/_who.html.erb
@@ -32,7 +32,7 @@
           </li>
           <li style="list-style-type: none; ">
             <h4 style="color: #F05F40 !important;">
-              430pm :: rehearsal(s)
+              430pm and on :: extra rehearsal(s)
             </h4>
           </li>
         </ul>
@@ -54,7 +54,7 @@
           Michael Pisaro
         </div>
         <div class="text">
-          Guest
+          Ben Levinson
         </div>
       </div>
       <div class="col-xs-12 col-sm-3">
@@ -62,10 +62,10 @@
           26th: Thursday
         </h4>
         <div class="text">
-          Guest
+          Chris Williams
         </div>
         <div class="text">
-          Guest
+          Elizabeth A. Baker
         </div>
       </div>
       <div class="col-xs-12 col-sm-3">
@@ -73,10 +73,10 @@
           27th: Friday
         </h4>
         <div class="text">
-          Guest
+          Carolyn Chen
         </div>
         <div class="text">
-          Guest
+          Sarah Pitan
         </div>
       </div>
       <div class="col-xs-12 col-sm-3">
@@ -84,10 +84,10 @@
           28th: Saturday
         </h4>
         <div class="text">
-          Guest
+          Michael Bullock
         </div>
         <div class="text">
-          Guest
+          Cindy Giron
         </div>
       </div>
     </div>
