--- a/app/views/home/sections/_who.html.erb
+++ b/app/views/home/sections/_who.html.erb
@@ -42,6 +42,9 @@
         <p>
           Be sure to follow us on <a href="https://www.facebook.com/coincidenceresidency" target="_blank">FaceBook</a> for updates!
         </p>
+        <p>
+          You can find the scores to all the pieces that will be workshopped and performed on our <a href="https://drive.google.com/drive/u/3/folders/0BxxfI60noM-6c25VT3NJUUJQR3M" target="_blank">Google Drive</a>.
+        </p>
         <br />
       </div>
     </div>
