the morning is too damn early

--- a/app/views/home/sections/_who.html.erb
+++ b/app/views/home/sections/_who.html.erb
@@ -43,7 +43,7 @@
           Be sure to follow us on <a href="https://www.facebook.com/coincidenceresidency" target="_blank">FaceBook</a> for updates!
         </p>
         <p>
-          You can find the scores to all the pieces that will be workshopped and performed on our <a href="https://drive.google.com/drive/u/3/folders/0BxxfI60noM-6c25VT3NJUUJQR3M" target="_blank">Google Drive</a>.
+          You can find the scores to all the pieces that will be workshopped and performed on our <a href="https://drive.google.com/drive/u/3/folders/0BxxfI60noM-6c25VT3NJUUJQR3M" target="_blank">Google Drive</a>. You can also find the program for Sunday's concert there!
         </p>
         <br />
       </div>
