--- a/app/views/home/sections/_about.html.erb
+++ b/app/views/home/sections/_about.html.erb
@@ -19,7 +19,14 @@
               Aaron
             </a>
           </span>
-           had a far too grandiose idea: "let's do our own music festival!" (Un)fortunately, they don't know when to stop. And here we are, with co-incidence, an experimental music residency kicking off its first season in January 2017. We wanted to fill a perceived gap in support for experimental composer/performers in the U.S. with a music festival/residency focused on experimental music and built as an experimental composer might build a piece.
+           had a far too grandiose idea: "let's do our own music festival!" (Un)fortunately, they don't know when to stop. And here we are, with co-incidence, an experimental music residency which kicked off it's first season in January 2017. We wanted to fill a perceived gap in support for experimental composer/performers in the U.S. with a music festival/residency focused on experimental music and built as an experimental composer might build a piece.
+           <br />
+           <br />
+           You can check out our article in the
+            <a href="http://www.bostonglobe.com/arts/music/2017/01/25/all-hands-deck-experimental-music-fest-somerville/41ygk4NGqSzHe72ir86v1I/story.html?s_campaign=bostonglobe%3Asocial%3Agoogleamp%3Asharetools" target="_blank">
+              Boston Globe here
+            </a>
+            .
         </p>
       </div>
       <div class="col-lg-4 col-lg-offset-4 text-center">
