--- a/app/views/home/sections/_guest_artists.html.erb
+++ b/app/views/home/sections/_guest_artists.html.erb
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading text-faded">
-          GUEST ARTISTS
+          2017 GUEST ARTISTS
         </h2>
       </div>
     </div>
@@ -11,8 +11,6 @@
   <br />
   <br />
   <div class="container guest-artists">
-
-      
 
       <!-- ben -->
       <div class="row guest-artist-row">
