--- a/app/views/home/sections/_hero.html.erb
+++ b/app/views/home/sections/_hero.html.erb
@@ -6,7 +6,7 @@
       </h1>
       </hr>
       <p>
-        an experimental music gathering in Somerville, MA, January 24 - 30, 2017
+        an experimental music gathering in Somerville, MA
       </p>
     </div>
   </div>
