--- a/app/views/home/sections/_who.html.erb
+++ b/app/views/home/sections/_who.html.erb
@@ -1,6 +1,8 @@
-<section id="who">
+<!-- 
 
-  <!-- header -->
+personel SECTION 
+
+<section id="who">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
@@ -12,7 +14,6 @@
     </div>
   </div>
 
-  <!-- schedule -->
   <div class="container">
     <div class="row text-center">
       <div class="col-lg-8 col-lg-offset-2">
@@ -97,9 +98,7 @@
   </div>
 </section>
 
-<!-- 
-
-OLD SECTION 
+-->
 
 <section id="who">
   <div class="container">
@@ -123,7 +122,7 @@ OLD SECTION
           </li>
           <li>
             <p>
-              One Resident Artist, determined via Directors' invitation: Michael Pisaro
+              One Resident Artist, determined via Directors' invitation: TBA
             </p>
           </li>
           <li>
@@ -141,5 +140,3 @@ OLD SECTION
     </div>
   </div>
 </section>
-
- -->
