--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,7 +17,7 @@
           <a class="page-scroll" href="#about">About</a>
         </li> -->
         <li>
-          <a class="page-scroll" href="#details">Details</a>
+          <a class="page-scroll" href="#who">Details</a>
         </li>
         <li>
           <a class="page-scroll" href="#partners">COLLABORATORS</a>
